tests/bad/bad02.tig
let
  type a = array of int
  var x := a[5] of 42
  var i := 2 + 6
in
  print_int(x[i])
end
